# fastmail-mac-menubar

./: Cargo.toml  README.md  tauri.conf.json
src/: main.rs
