[package]
name = "fastmail-mac-menu-bar"
version = "0.0.0"
description = "Fastmail Mac Menu bar"
authors = ["Eduardo Stuart <e@s.tuart.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["devtools", "macos-private-api", "notification", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
objc = "0.2.7"
cocoa = "0.24.1"
exitcode = "1.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
